--- a/src/styles.css
+++ b/src/styles.css
@@ -4,6 +4,7 @@
 html, body{
     font-family: "Montserrat", sans-serif;
     box-sizing: border-box !important;
+    background-color: #fcfcfc;
     /* width: 100vw;
     height: 100vh; */
 }
@@ -16,19 +17,43 @@ h1{
     font-weight: 700;
 }
 
+canvas{
+    width: 794px;
+    height: 400px;
+    /* background-color: red; */
+}
+
 .hidden{
     display: none;
 }
 
+.color-picker-container{
+    margin-left: auto;
+    display: flex;
+    justify-items: center;
+    color: black;
+    font-weight: 500;
+}
+
+.color-circle{
+    cursor: pointer;
+    width: 36px;
+    height: 36px;
+    border: 1px solid #585858;
+    border-radius: 100px;
+    background-color: blue;
+    margin-left: 12px;
+}
+
 .page-container{
-    width: 100vw;
+    margin: 0 auto;
+    width: 970px;
     height: 100vh;
-    background-color: #fcfcfc;
     padding: 64px 64px;
 }
 
 .card-container{
-    color: white;
+    background-color: #fefefe;
     box-shadow: 4px 8px 30px rgba(0, 0, 0, 0.08);
     padding: 24px;
     border-radius: 12px;
