initialized varables and canvas dimensions

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -37,7 +37,7 @@
 
     <!-- Canvas -->
     <div class="card-container margin-top-24">
-        <canvas id="canvas" class="canvas"></canvas>
+        <canvas id="canvas" class="canvas" width='{{canvasWidth}}' height='{{canvasHeight}}'></canvas>
     </div>
 
 
