downloading scheme file finished

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,5 +1,12 @@
 <div class="page-container">
-    <h1>Graphics</h1>
+
+    <div class="title-section">
+        <h1>Graphics</h1>
+
+        <button class="btn-outline" (click)="downloadSchemeFile()">
+            <i class="material-icons md-18">get_app</i>
+        </button>
+    </div>
 
 
     <!-- menu -->
